
* Reduced the volume of logging when Parliament is running in daemon mode.  Log4j is
  now configured without a console logger, which means that the contents of the
  parliament.log file are not duplicated in the jsvc-log.txt file.  (When run at the
  command line, the logging configuration is unchanged, so you will still be able to
  see the log contents in real time in that case.)



=================================================

Version 2.7.13 (5/6/2019):

----------------------   Important -- Please Read !!!   -----------------------
---                                                                         ---
---  The file format of version 2.7.13 is not backwards compatible with     ---
---  versions 2.7.11 and older.  To upgrade the data stored in a prior      ---
---  release of Parliament, please follow the procedure in Section 2.1.2,   ---
---  "Upgrading an Existing Installation", in the Parliament User Guide.    ---
---  This can be found in your Parliament download, and it is also          ---
---  available here:                                                        ---
---                                                                         ---
---  https://github.com/SemWebCentral/parliament/tree/master/doc/UserGuide  ---
---                                                                         ---
-------------------------------------------------------------------------------

* Added handling for par:directType and par:directSubClassOf predicates to speed queries
  for most-derived types.  See the User Guide, Section 2.3.1, "Reserved Predicates", for
  more information.

* Enhanced the inference engine so that whenever the subproperty rule is on, statements
  of the form "?x a ?y" where ?y is one of the standard property classes will result in
  "?x rdfs:subPropertyOf ?x".  (The property classes are owl:AnnotationProperty,
  owl:AsymmetricProperty, owl:DatatypeProp, owl:DeprecatedProperty, owl:FuncProp,