@@ -280,153 +280,4 @@
 			<arg line="update"/>
 		</exec>
 	</target>
-
-	<!-- ======= IVY PUBLISHING TASKS ============= -->
-
-	<property name="project.organization" value="com.bbn.parliament"/>
-	<property name="artifacts.dir" value="${artifactsDir}"/>
-	<property name="ivy.repo" value="tools-ke-publish"/>
-	<property name="ivy.log.level" value="quiet"/>
-
-	<target name="publish-integration" description="Publish the Parliament components as an Ivy integration build">
-		<antcall target="publish">
-			<param name="overwrite" value="true"/>
-			<param name="release.status" value="integration"/>
-			<param name="release.version" value="${parliamentVersion}-SNAPSHOT"/>
-		</antcall>
-	</target>
-
-	<target name="publish-release" description="Publish the Parliament components as an Ivy release">
-		<antcall target="publish">
-			<param name="overwrite" value="false"/>
-			<param name="release.status" value="release"/>
-			<param name="release.version" value="${parliamentVersion}"/>
-		</antcall>
-	</target>
-
-	<target name="publish" depends="checkForNatives">
-		<fail
-			unless="release.version"
-			message="Publishing requires a version. Set the release.version property (e.g. ant publish-release -Drelease.version=1.0) - ${release.version}"/>
-		<fail
-			unless="overwrite"
-			message="Property, 'overwrite' must be set to true or false"/>
-		<fail
-			unless="release.status"
-			message="Property, 'release.status' must be set to integration or release"/>
-
-		<echo level="info">
-#### Publishing Parliament Components to tools-ke repository as ${release.status} build with version ${release.version}. ####
-		</echo>
-
-		<!-- Parliament JNI -->
-		<ivy:resolve log="${ivy.log.level}" file="${ivyDir}/ivy-parliamentjni.xml"/>
-		<ivy:publish
-			organisation="${project.organization}"
-			module="Parliament"
-			pubrevision="${release.version}"
-			forcedeliver="true"
-			resolver="${ivy.repo}"
-			overwrite="${overwrite}"
-			status="${release.status}"
-			artifactspattern="${artifacts.dir}/[artifact].[ext]"/>
-
-		<!-- JenaParliament -->
-		<ivy:resolve log="${ivy.log.level}" file="${ivyDir}/ivy-jenaparliament.xml"/>
-		<ivy:publish
-			organisation="${project.organization}"
-			module="JenaParliament"
-			pubrevision="${release.version}"
-			forcedeliver="true"
-			resolver="${ivy.repo}"
-			overwrite="${overwrite}"
-			status="${release.status}"
-			artifactspattern="${artifacts.dir}/[artifact].[ext]"/>
-
-		<!-- Joseki Parliament Client -->
-		<ivy:resolve log="${ivy.log.level}" file="${ivyDir}/ivy-josekiparliamentclient.xml"/>
-		<ivy:publish
-			organisation="${project.organization}"
-			module="JosekiParliamentClient"
-			pubrevision="${release.version}"
-			forcedeliver="true"
-			resolver="${ivy.repo}"
-			overwrite="${overwrite}"
-			status="${release.status}"
-			artifactspattern="${artifacts.dir}/[artifact].[ext]"/>
-
-		<!-- Win32 Natives -->
-		<antcall target="publishWin32">
-			<param name="overwrite" value="${overwrite}"/>
-			<param name="release.status" value="${release.status}"/>
-			<param name="release.version" value="${release.version}"/>
-		</antcall>
-
-		<!-- Win64 Natives -->
-		<antcall target="publishWin64">
-			<param name="overwrite" value="${overwrite}"/>
-			<param name="release.status" value="${release.status}"/>
-			<param name="release.version" value="${release.version}"/>
-		</antcall>
-		<!-- MacOs Natives -->
-		<antcall target="publishMacOs">
-			<param name="overwrite" value="${overwrite}"/>
-			<param name="release.status" value="${release.status}"/>
-			<param name="release.version" value="${release.version}"/>
-		</antcall>
-	</target>
-
-	<target name="checkForNatives">
-		<available file="${windowsReleaseDir}/32" type="dir" property="win32.exists"/>
-		<available file="${windowsReleaseDir}/64" type="dir" property="win64.exists"/>
-		<available file="${macosReleaseDir}" type="dir" property="macos.exists"/>
-	</target>
-
-	<target name="publishWin32" if="win32.exists">
-		<zip destfile="${artifactsDir}/ParliamentDB-win32.zip">
-			<fileset dir="${windowsReleaseDir}/32" includes="*"/>
-		</zip>
-		<ivy:resolve log="${ivy.log.level}" file="${ivyDir}/ivy-parliamentdb-win32.xml"/>
-		<ivy:publish
-		organisation="${project.organization}"
-		module="ParliamentDB-win32"
-		pubrevision="${release.version}"
-		forcedeliver="true"
-		resolver="${ivy.repo}"
-		overwrite="${overwrite}"
-		status="${release.status}"
-		artifactspattern="${artifacts.dir}/[artifact].[ext]"/>
-	</target>
-
-	<target name="publishWin64" if="win64.exists">
-		<zip destfile="${artifactsDir}/ParliamentDB-win64.zip">
-			<fileset dir="${windowsReleaseDir}/64" includes="*"/>
-		</zip>
-		<ivy:resolve log="${ivy.log.level}" file="${ivyDir}/ivy-parliamentdb-win64.xml"/>
-		<ivy:publish
-		organisation="${project.organization}"
-		module="ParliamentDB-win64"
-		pubrevision="${release.version}"
-		forcedeliver="true"
-		resolver="${ivy.repo}"
-		overwrite="${overwrite}"
-		status="${release.status}"
-		artifactspattern="${artifacts.dir}/[artifact].[ext]"/>
-	</target>
-
-	<target name="publishMacOs" if="macos.exists">
-		<zip destfile="${artifactsDir}/ParliamentDB-macos.zip">
-			<fileset dir="${macosReleaseDir}" includes="*"/>
-		</zip>
-		<ivy:resolve log="${ivy.log.level}" file="${ivyDir}/ivy-parliamentdb-macos.xml"/>
-		<ivy:publish
-		organisation="${project.organization}"
-		module="ParliamentDB-macos"
-		pubrevision="${release.version}"
-		forcedeliver="true"
-		resolver="${ivy.repo}"
-		overwrite="${overwrite}"
-		status="${release.status}"
-		artifactspattern="${artifacts.dir}/[artifact].[ext]"/>
-	</target>
 </project>
